Properly invite members being added to a group
If members are being added to a PMIx_Group_construct operation,
then those members need to be invited to join the group via
PMIx event. Properly track that via the grpcomm signature object,
including the info required to be passed to the invited members
so they have a complete picture of the group.

Signed-off-by: Ralph Castain <rhc@pmix.org>

--- a/src/prted/pmix/Makefile.am
+++ b/src/prted/pmix/Makefile.am
@@ -22,4 +22,5 @@ libprrte_la_SOURCES += \
           prted/pmix/pmix_server_gen.c \
           prted/pmix/pmix_server_queries.c \
           prted/pmix/pmix_server_allocate.c \
-          prted/pmix/pmix_server_session.c
+          prted/pmix/pmix_server_session.c \
+          prted/pmix/pmix_server_group.c
