prte_configure_options.m4: Add --with-prte-binary-prefix
Add configure CLI option to allow optionally prefixing PRTE binary and
library filenames.

Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/include/prte_version.h.in
+++ b/include/prte_version.h.in
@@ -23,4 +23,6 @@
 #define PRTE_VERSION_RELEASE @prterelease@
 
 #define PRTE_NUMERIC_VERSION @prtenumeric@
+
+#define PRTE_BINARY_PREFIX @PRTE_BINARY_PREFIX@
 #endif
