--- a/src/tools/pterm/Makefile.am
+++ b/src/tools/pterm/Makefile.am
@@ -24,13 +24,14 @@
 
 AM_LDFLAGS = $(prte_hwloc_LDFLAGS) $(prte_libevent_LDFLAGS) $(prte_pmix_LDFLAGS)
 
-bin_PROGRAMS = pterm
+#Apply binary prefix to the names
+bin_PROGRAMS = @PRTE_BINARY_PREFIX@pterm
 
-pterm_SOURCES = \
+@PRTE_BINARY_PREFIX@pterm_SOURCES = \
         pterm.c
 
-pterm_LDADD = \
+@PRTE_BINARY_PREFIX@pterm_LDADD = \
     $(prte_libevent_LIBS) \
     $(prte_hwloc_LIBS) \
     $(prte_pmix_LIBS) \
-	$(top_builddir)/src/libprrte.la
+	$(top_builddir)/src/lib@PRTE_BINARY_PREFIX@prrte.la
