Restore prte command
Commit c299264e88 removed the prte executable.  Turns out that we
actually need that command, so bring it back.

Signed-off-by: Jeff Squyres <jeff@squyres.com>

--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -29,11 +29,13 @@ SUBDIRS += \
 	tools/prted \
 	tools/prun \
     tools/prte_info \
+    tools/prte \
     tools/pterm
 
 DIST_SUBDIRS += \
 	tools/prted \
 	tools/prun \
     tools/prte_info \
+    tools/prte \
     tools/pterm
 
