github action: set some parameters differently
the documentation on this action is a little confusing.
also turn off auto_merge/approve for now since
i can't generated github token with anything but
read access perms for this repo.

Signed-off-by: Howard Pritchard <howardp@lanl.gov>

--- a/.github/workflows/fork_sync.yaml
+++ b/.github/workflows/fork_sync.yaml
@@ -13,6 +13,10 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.8
         with:
-          owner: gagarc
+          owner: openpmix
           base: master
           head: master
+          auto_merge: false
+          auto_approve: false
+
+          
