--- a/.github/workflows/fork_sync.yaml
+++ b/.github/workflows/fork_sync.yaml
@@ -13,10 +13,11 @@ jobs:
     steps:
       - uses: tgymnich/fork-sync@v1.8
         with:
+          token: token: ${{ secrets.PRRTE_SYNC_UPSTREAM_MASTER_ID }}
           owner: openpmix
           base: master
           head: master
-          auto_merge: false
-          auto_approve: false
+          auto_merge: true
+          auto_approve: true
 
           
