--- a/.github/workflows/fork_sync.yaml
+++ b/.github/workflows/fork_sync.yaml
@@ -2,7 +2,7 @@ name: Sync Fork
 
 on:
   schedule:
-    - cron: '*/30 * * * *' # every 30 minutes
+    - cron: '0 12 * * *' # every day at 12
   workflow_dispatch: # on button click
 
 jobs:
