--- a/.github/workflows/fork_sync.yaml
+++ b/.github/workflows/fork_sync.yaml
@@ -17,7 +17,7 @@ jobs:
           owner: openpmix
           base: master
           head: master
-          auto_merge: false
+          auto_merge: true
           auto_approve: false
 
           
